--- a/frontend/packages/ui/src/styles/globals.css
+++ b/frontend/packages/ui/src/styles/globals.css
@@ -29,7 +29,8 @@
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
-    --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
+    --font-sans:
+      ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
   }
